# ReflectionHLE

./: ABYSGAME.PRJ  AUDIOABS.H  AUDION3D.H  AUDIOSDM.H  AUDIOSOD.H  AUDIOWL6.H  AUTHORS.md  C0.ASM  C4_ACT1.C  C4_ASM.ASM  C4_DEBUG.C  C4_DRAW.C  C4_GAME.C  C4_MAIN.C  C4_PLAY.C  C4_SCALE.C  C4_SCA_A.ASM  C4_STATE.C  C4_TRACE.C  C4_WIZ.C  CMakeLists.txt  COMPILING.md  CONTRIBUTING.md  ChangeLog.txt  FOREIGN.H  GELIB.C  GELIB.H  GFXV_APO.H  GFXV_N3D.H  GFXV_WL1.EQU  GFXV_WL6.H  H_LDIV.ASM  ID_CA.C  ID_CA.H  ID_HEAD.H  ID_HEADS.H  ID_IN.C  ID_IN.H  ID_MM.C  ID_MM.H  (+124 more)
.github/workflows/: ci.yml
LICENSES/: bsd-3-clause-template.txt
MISC/: n3dmdfix.diff  notes.md
STATIC/: MAKE.SH  MAKEOBJ  MAKEOBJ.C
catabyss/: Makefile  copying
catabyss/src/: be_sdl.h  be_sdl_graphics.c  c4_asm.asm  c4_debug.c  c4_draw.c  c4_game.c  c4_scale.c  c4_state.c  c4_trace.c  def.h  gelib.c  id_asm.equ  id_ca.c  id_ca.h  id_in.c  id_mm.c  id_mm.h  id_sd.c  id_sd.h  id_strs.h  id_us.h  id_us_1.c  id_vw.c  id_vw_a.c  mike.h
catabyss/src/somever/: be_cross_compat.c
catabyss/src/static_registered/: audiohhd.abs  egadict.c  egahead.abs  introscn.scn
catabyss/src/static_shareware/: audiohhd.abs  egadict.abs  egadict.c  egahead.abs
cmake/: GenReflectionHLEGitHash.cmake  MacOSBundle.cmake  MacOSDependencyScan.cmake
installers_templates/mojosetup/: mojosetup.x86_64
installers_templates/nsis/: reflection-keen.nsi
old_installers_templates/mojosetup/: mojosetup.i386
rsrc/: Info.plist  analog_circle.xpm  analog_circle_bottom_input.xpm  analog_circle_bottomleft_input.xpm  analog_circle_bottomright_input.xpm  analog_circle_left_input.xpm  analog_circle_right_input.xpm  analog_circle_top_input.xpm  analog_circle_topleft_input.xpm  analog_circle_topright_input.xpm  button_back.xpm  button_bolt.xpm  button_confirm.xpm  button_debug_keys.xpm  button_enter.xpm  button_function_keys.xpm  button_heal.xpm  button_jump.xpm  button_map.xpm  button_nuke.xpm  button_pagedown.xpm  button_pageup.xpm  button_pause.xpm  button_quickturn.xpm  button_run.xpm  button_scrolls.xpm  button_shoot.xpm  button_stats.xpm  button_strafe.xpm  button_use.xpm  button_weapons.xpm  minibutton_pagedown.xpm  minibutton_pageup.xpm  pad_dpad.xpm  pad_dpad_bottomleft_input.xpm  pad_dpad_bottomright_input.xpm  pad_dpad_down_input.xpm  pad_dpad_left_input.xpm  pad_dpad_right_input.xpm  pad_dpad_topleft_input.xpm  (+29 more)
rsrc/old/: pad_thumb_buttons_mono.xpm
src/: CMakeLists.txt  GNUmakefile  Makefile.common  actual_main.c  be_cross.c  be_cross.h  be_cross_doszeroseg.c  be_cross_emm.c  be_cross_emm.h  be_cross_fs.c  be_cross_mem.c  be_cross_mem_internal.h  be_cross_stdint.h  be_cross_xmm.c  be_cross_xmm.h  be_features.h  be_gamedef.h  be_gamedef_cat3d.h  be_gamedef_catabyss.h  be_gamedef_catadventures.h  be_gamedef_catapoc.h  be_gamedef_catarm.h  be_gamedef_kdreams.h  be_gamedef_n3dwt10.h  be_gamedef_sdmfg10.h  be_gamedef_sodac14.h  be_gamedef_wl1ap10.h  be_gamedef_wl1ap11.h  be_gamedef_wl1ap12.h  be_gamedef_wl1ap14.h  be_gamedef_wl6ac14.h  be_gamedef_wolf3d.h  be_gamestr.h  be_gamever.h  be_launcher.c  be_launcher.h  be_sdl.c  be_sdl.h  be_sdl_audio_timer.c  be_sdl_graphics.c  (+73 more)
src/ExeUnpacker/: ExeUnpacker.c  ExeUnpacker.cpp  ExeUnpacker.h
src/android-lib/: AndroidManifest.xml  project.properties
src/android-lib/app/: build.gradle
src/android-lib/jni/: Android_common.mk  Application.mk  notes.txt
src/android-project/: settings.gradle
src/android-project/app/: build.gradle
src/android-project/app/jni/: CMakeLists.txt
src/android-project/reflectionhle/: build.gradle
src/android-project/reflectionhle/jni/: CMakeLists.txt
src/backend/audio/: be_audio_digi.c  be_audio_init.c  be_audio_main_thread.c  be_audio_main_thread.h  be_audio_mixer.c  be_audio_mixer.h  be_audio_opl.c  be_audio_pcspkr.c  (+4 more)
src/catabyss/: Makefile  actual_main.c  c4_asm.c  c4_debug.c  c4_game.c  c4_main.c  c4_play.c  c4_sca_a.asm  c4_trace.c  c4_wiz.c  def.h  gelib.c  gelib.h  gfxe_abs.equ  id_ca.c  id_heads.h  id_in.c  id_in.h  id_mm.c  id_mm.h  id_sd.c  id_us.h  id_us_1.c  id_vw.c  id_vw_ae.c
src/compat/: kdreams_registered_100_stateoffset_map.txt  state_offset_conv_code_generator.c  state_pointer_conv_code_generator.c
src/crc32/: crc32.c  crc32.h
src/depklite/: depklite.c  depklite.h
src/dirent/: dirent.c  dirent.h  tchar.h
src/fonts/: font_out.c  fonts_note.txt
src/id91_11/: GNUmakefile  REFKEEN-NOTES.txt  altcontroller.h  id_ca.c  id_ca.h  id_in.c  id_in.h  id_mm.c  id_mm.h  id_rf.c  id_rf.h  id_rf_a.c  id_sd.c  id_sd.h  id_strs.h  id_us.h  id_us_1.c  id_us_2.c  id_us_a.c  id_vers.h  id_vw.c  id_vw.h  id_vw_a.c  id_vw_ae.c
src/idtech_common/: fixed_sintable.c
src/kdreams/: CMakeLists.txt  GNUmakefile  Makefile  Makefile.cga  Makefile.common  REFKEEN-NOTES.txt  actual_main.c  altcontroller.c  altcontroller.h  gelib.c  id_ca.c  id_ca.h  id_heads.h  id_in.c  id_in.h  id_mm.c  id_mm.h  id_rf.c  id_rf.h  id_rf_a.c  id_sd.c  id_sd.h  id_us.c  id_us.h  id_us_a.c  id_us_s_kdreams100.c  id_vw.c  id_vw.h  id_vw_a.c  id_vw_ac.c  id_vw_ae.c  jam_io.c  jam_io.h  kd_act1.c  kd_act2.c  kd_def.h  kd_demo.c  kd_keen.c  kd_main.c  kd_play.c  (+7 more)
src/kdreg193/: be_cross_compat.c
src/kdshar113/: gelib.h  jam_io.c  lzhuf.c  soft.h
src/kdshar120/: be_cross_compat.c
src/lscr/: jampak.h  loadscn2.c  sl_file.h
src/nukedopl/: opl3.c  opl3.h
src/opl/: dbopl.c  dbopl.h
src/static/: mapdict.c  maphead.c
src/static_registered/: _shrware.c  egadict.abs  introscn.c
src/static_shareware/: audiodct.abs  audiohhd.c  make.bat
src/unlzexe/: unlzexe.c  unlzexe.h
src/wolf3d/: CMakeLists.txt  REFKEEN-NOTES.txt  altcontroller.c  altcontroller.h  audion3d.h  audiosdm.h  audiosod.h  audiowl1.h  audiowl6.h  budiowl6.h  contigsc.c  detect.c  f_spear.h  foreign.h  gamesaving.c  gfxe_sod.equ  gfxe_sod.h  gfxe_wl1.equ  gfxe_wl1.h  gfxe_wl6.equ  gfxe_wl6.h  gfxv_apo.h  gfxv_n3d.h  gfxv_sdm.equ  gfxv_sdm.h  gfxv_sod.equ  gfxv_sod.h  gfxv_wl1.h  gfxv_wl6.equ  gfxv_wl6.h  id_ca.c  id_ca.h  id_head.h  id_heads.h  id_in.c  id_in.h  id_mm.c  id_mm.h  id_pm.c  id_pm.h  (+66 more)
(+522 files in other folders)
